fix: Editable text align
By adding text-align: left, the RTL text doesn't overflow from the
container. This isn't a very good fix, but a fix nonetheless

--- a/webapp/src/components/kanban/kanban.scss
+++ b/webapp/src/components/kanban/kanban.scss
@@ -55,7 +55,7 @@
             .Editable {
                 color: rgba(var(--center-channel-color-rgb), 1);
                 background: transparent;
-                text-align: end;
+                text-align: left;
             }
         }
 
